<resources>
    <string name="app_name">StoryLine</string>
    <string name="headline_createAct">New Story</string>
    <string name="headline_runningAct">Your Story</string>
    <string name="headline_myStories">My Stories</string>

    <string name="hot">hot</string>
    <string name="not">not</string>

    <string name="et_loginAct_username">User Name</string>
    <string name="et_loginAct_password">Password</string>
    <string name="btn_loginAct_signIn">Create New Story</string>
    <string name="btn_loginAct_continue">Continue My Story</string>
    <string name="btn_loginAct_signUp">Sign Up</string>
    <string name="btn_loginAct_ForgotPassword">Forgot Password?</string>
    <string name="tv_loginAct_createStory">Create Story</string>
    <string name="tv_loginAct_continueStory">Continue Story</string>

    <string name="et_registerAct_name">Name</string>
    <string name="et_registerAct_username">User Name</string>
    <string name="et_registerAct_password">Password</string>
    <string name="et_registerAct_email">Email</string>
    <string name="btn_registerAct_register">Register</string>

    <string name="tv_createAct_createStory">Create Story</string>
    <string name="et_createAct_storyName">*Story Name</string>
    <string name="et_createAct_storyDescription">Story Description</string>
    <string name="et_createAct_storyLocation">Story Location</string>
    <string name="btn_createAct_startNewStory">Go!</string>
    <string name="btn_crateAct_startDate">Date To Start</string>
    <string name="btn_crateAct_endDate">Estimated End Date</string>

    <string name="tv_runningAct_mapTitle">Day of your trip!</string>

    <string name="tv_myProfile_nameLabel">Name:</string>
    <string name="tv_myProfile_emailLabel">Email:</string>

    <string name="tv_FinishAct_chooseSouvenir">Choose Your Souvenir</string>
    <string name="btn_FinishAct_story">Story</string>
    <string name="btn_FinishAct_video">Video</string>
    <string name="btn_FinishAct_album">Album</string>

    <string name="menu_finishStory">Finish Story</string>
    <string name="menu_back">Back</string>
    <string name="menu_myProfile">My Profile</string>
    <string name="menu_myStories">My Stories</string>
    <string name="menu_logOut">Log Out</string>
    <string name="menu_newStory">Create New Story</string>

    <string name="registerAct_keyForImageAfterRotating">registerAct_keyForImageAfterRotating</string>
    <string name="pref_file_key">com.postpc.nisha.storyline_pref_file_key</string>
    <string name="pref_name_key">com.postpc.nisha.storyline_pref_name_key</string>
    <string name="pref_password_key">com.postpc.nisha.storyline_pref_password_key</string>
    <string name="pref_username_key">com.postpc.nisha.storyline_pref_username_key</string>
    <string name="pref_email_key">com.postpc.nisha.storyline_pref_email_key</string>
    <string name="file_name_for_profile_image">file_name_for_profile_image</string>
    <string name="intentKey_login_to_create_userName">intentKey_login_to_create_userName</string>
    <string name="intentKey_create_to_running_story_name">intentKey_create_to_running_story_name</string>
    <string name="intentKey_running_to_finish_story_name">intentKey_running_to_finish_story_name</string>
    <string name="intentKey_myStories_to_finish_story_name">intentKey_myStories_to_finish_story_name</string>
    <string name="default_end_date">story running</string>
    <string name="default_end_time">story running</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_maps">Map</string>

    <string name="intentKey_cur_story_name">cur_story_name</string>
    <string name="intentKey_cur_story_start_date">cur_story_start_date</string>
    <string name="intentKey_cur_story_end_date">cur_story_end_date</string>


    <string name="unknown_location">Unknown location</string>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="permission_rationale">Permission is needed for core functionality</string>
    <string name="ok">OK</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="batched_location_updates">Batched location updates</string>
    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>

    <string name="lable_map_finish_act">Trip Route</string>


    <!-- Eran strings values -->
    <string name="start_time_key">StartTime</string>
    <string name="end_time_key">EndTime</string>
    <string name="start_date_key">StartDate</string>
    <string name="end_date_key">EndDate</string>
    <string name="folder_key">FolderPath</string>

</resources>
