<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_registerAct_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:hint="@string/et_registerAct_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_registerAct_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:hint="@string/et_registerAct_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_registerAct_name" />

        <EditText
            android:id="@+id/et_registerAct_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:inputType = "textPassword"
            android:hint="@string/et_registerAct_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_registerAct_username" />

        <EditText
            android:id="@+id/et_registerAct_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:hint="@string/et_registerAct_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_registerAct_password" />

        <ImageButton
            android:id="@+id/btn_registerAct_userPicture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:onClick="btn_registerAct_userPicture_clicked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_registerAct_email"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <Button
            android:id="@+id/btn_registerAct_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="btn_registerAct_register_clicked"
            android:text="@string/btn_registerAct_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_registerAct_userPicture" />

        <ImageView
            android:id="@+id/iv_registerAct_takenPicture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_registerAct_userPicture"
            app:layout_constraintEnd_toStartOf="@+id/btn_registerAct_userPicture"
            app:layout_constraintTop_toTopOf="@+id/btn_registerAct_userPicture"
            app:srcCompat="@mipmap/ic_launcher_round" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>